2004-05-07    <chromakode@llama>

	* fgdiag/lib/fgdb.py (TableRow): Moved code to verify a row's
	existence to the Table classes.

2004-05-05    <chromakode@llama>

	* fgdiag/pogotest.profile: Added profiling data for pogotest.py in pogotest.profile

	* fgdiag/lib/exceptions.py: Added central exception file.

2004-05-04  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/lib/pyutil.py (withPager): 1.2 don't use apply()

	* fgdiag/lib/test.py (TestableDevice): 1.13 some docstrings

	* fgdiag/testtester.py: 1.1 use getattr() instead of __dict__

2004-05-04    <chromakode@llama>

	* fgdiag/lib/prompts.py (prompt_for_id):  No longer needs fgdb for
	non-db stuff

2004-04-27  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/modem/modem.py (find_speed, get_serial_devices): 1.3 document
	return values.
	(main): 1.4 isapnp moved to fgdiag.lib.

2004-04-08  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/modem/test_modem.py (ResponseParser.test_find_speed): 1.1
	trap (and examine) output from find_speed.

	* fgdiag/modem/modem.py: 1.1 Removed definitions of False and True.
	(find_speed): 1.1 add outputFunc parameter, so that we can run tests
	on it without it spewing to stdout.

2004-04-03  Kevin Turner  <kevin@freegeek.org>

	* bin/testscript.py: 1.2 s/fgdiag.lib.testing/fgdiag.lib.test/

2004-03-25  Kevin Turner  <kevin@freegeek.org>

	* fgdiag/modem/pcimodem.py: 1.1 use new path for pyutil.

2004-03-25  Kevin Turner  <kevin@freegeek.org>

	* selftest/test_modem.py, test_syslog: 1.3 use trial for unit tests.

	* selftest/cursesnodisk: 1.1 test __name__ == "main"

	* meminfo.py: 1.1 add shebang.

	* selftest/test_syslog.py, test_modem.py, __init__.py:
	* badblocks.py, __init__.py: Added module-level docstrings.

	* README: 1.4 mention documents HACKING and testing-purpose, and
	add cursesdisk.py to list of scripts.

	* Makefile (epydoc): 1.3 Added rule to build documentation for
	python modules.
	(test): 1.4 add 'test' target.
