@@ -1,5 +1,8 @@
 2004-05-07    <chromakode@llama>
 
+	* fgdiag/lib/exceptions.py: Changed name to "errors". Old name stepped on the python
+	"exceptions" module.
+
 	* fgdiag/lib/fgdb.py (TableRow): Moved code to verify a row's
 	existence to the Table classes.
 
